static/css/dashboard.css
.multiselect-container {
  max-width: 650px;
  margin-left: auto;
  margin-right: auto;
  display: block;
  float: none;
  width: 90%;
}

.multiselect-border {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  border-radius: 4px;
  display: flex;
  position: relative;
  background-color: var(--bg-color-secondary);
  border: 1.5px solid var(--light);
  box-shadow: 0 2px 3px rgba(0,0,0,0.06);
}


.multiselect-border:hover, .multiselect-border.focused {
  box-shadow: 0 0 6px 0 var(--shadow-light);
}

ul.multiselect {
  z-index: 99;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  align-content: center;
  flex: 1;
  flex-wrap: wrap;
  list-style-type: none;
  margin: 0 auto;
  margin-block-start: 0;
  margin-block-end: 0;
  margin-inline-start: 0;
  margin-inline-end: 0;
  padding-inline-start: 0;
  background-color: var(--bg-color-secondary);
  color: var(--body-color);
  padding: .5rem .75rem;
}

ul.multiselect li.item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 3px;
  list-style: none;
  float: left;
  border: 1px solid #666666;
  border-radius: 5px;
  padding: 0 5px;
  color: black;
  background-color: lightblue;
  flex: 0 0 5.8rem;
}

ul.multiselect li.item[data-state='active_online'],
ul.multiselect li.item[data-state='slashing_online'],
ul.multiselect li.item[data-state='exiting_online'] {
  background-color: lightgreen;
}
ul.multiselect li.item[data-state='active_offline'],
ul.multiselect li.item[data-state='slashing_offline'],
ul.multiselect li.item[data-state='exiting_offline'] {
  background-color: lightcoral;
}
ul.multiselect li.item[data-state='pending'] {
  background-color: lightyellow;
}
ul.multiselect li.item[data-state='exited'],
ul.multiselect li.item[data-state='slashed'] {
  background-color: lightgray;
}

ul.multiselect li.item .remove-validator {
  cursor: pointer;
}

ul.multiselect li.item .remove-validator:hover {
  filter: drop-shadow(1px 2px 3px #888) invert(0.2);
}

ul.multiselect li.input {
  flex: 1 200px;
  list-style: none;
  float: left;
  margin: 0;
  height: inherit;
  width: inherit;
  border-radius: 0;
}

ul.multiselect li.input span {
  width: 100%;
  border: 1px solid var(--bg-color-secondary);
  border-radius: 5px;
  background: var(--bg-color-secondary);
}

ul.multiselect li.input input {
  color: var(--font-color);
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  -o-appearance: none;
  appearance: none;
  -webkit-tap-highlight-color: var(--shadow-light);
  font-size: 1.1em;
  font-weight: normal;
  background: none;
  outline: none;
  border: none;
  z-index: 1;
  position: relative;
  width: 100%;
}

ul.multiselect input:focus {
  outline: none;
}

#validators-table-holder,
#pending-validators-table-holder,
#active-validators-table-holder,
#ejected-validators-table-holder,
#offline-validators-table-holder {
  display: none;
}

#chart-holder {
  display: none;
}

#stats {
  display: none;
  flex-wrap: wrap;
}
.stats-box {
  flex: 1;
  margin: 10px;
  padding: 10px;
  box-shadow: 0 2px 8px 0 var(--shadow-light);
  border-radius: 10px;
}
.stats-box > .stats-box-header {
  font-size: 12px;
}
.stats-box > .stats-box-body {
  font-size: 24px;
}

@media (max-width: 1300px) {
  .stats-box > .stats-box-header {
    font-size: 12px;
  }
  .stats-box > .stats-box-body {
    font-size: 18px;
  }
}

.dashboard-container {
  margin: 2rem 0;
}

.dashboard-container > div {
  margin: .5rem auto;
}
 
.dashboard-header {
  display: flex;
  justify-content: space-between;
  -webkit-box-pack: justify;
  flex-wrap: wrap;
}

.dashboard-header-content {
  display: flex;
  justify-content: center;
  -webkit-box-pack: center;
}

.dashboard-header-content > div {
  margin: 0 1rem;
}

.dashboard-title {
  display: flex;
}

@media screen and (max-width: 818px) {
  .dashboard-container {
    margin: 1rem 0;
  }

  .dashboard-title-value > .title {
    display: none;
  }

  .dashboard-header {
    justify-content: center;
    margin-left: -2rem;
    margin-bottom: -1rem;
  }

  .brand {
    display: flex;
    align-items: center;
    margin-bottom: 1rem;
    margin-left: -1rem;
  }

  .dashboard-header-content {
    justify-content: space-around;
    flex-wrap: wrap;
  }

  .dashboard-header-content > div {
    margin: .5rem;
  }

    .dashboard-container > div {
    margin: .5rem auto;
  }
}

.dashboard-header-content .title, .dashboard-title-value .title {
  color: var(--gray);
  font-weight: 400;
  font-size: 0.9rem;
}
.dashboard-header-content .stat, .dashboard-title-value .stat {
  font-weight: 500;
  font-size: 1.1rem;
}

.dashboard-header-content .stat::after {
  font-size: 0.8rem;
  font-weight: 400;
  color: var(--gray);
}

.dashboard-cards {
  display: flex;
  justify-content: space-around;
}

.dashboard-charts {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}

.dashboard-charts > div {
  flex: 1 600px;
  margin: .5rem;
}

.dashboard-charts .chart {
  display: flex;
  justify-content: center;
}

.dashboard-table {
  display: flex;
  justify-content: center;
  -webkit-box-pack: center;
}

.increased:before {
  content: "\2191";
  color: var(--success);
  padding: 0 .1rem;
  font-weight: 500;
}

.decreased:before {
  content: "\2193";
  color: var(--danger);
  padding: 0 .1rem;
  font-weight: 500;
}

.dashboard-container .tt-menu {
  margin-top: 4px;
  background-color: var(--banner-background);
  border: 1px solid var(--banner-background);
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  box-shadow: 0 1px 25px var(--banner-background);
  overflow-y: auto;
  max-height: 300px;
  cursor: pointer;
  width: 100%;
  color: var(--banner-text);
}

.dashboard-container .tt-query {
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.dashboard-container .tt-suggestion {
  line-height: 34px;
  margin: 0;
  padding: 0 1rem;
}

.dashboard-container .tt-suggestion.tt-cursor,
.dashboard-container .tt-suggestion:hover {
  color: #fff;
  background-color: #007bff;
}

.dashboard-container .tt-dataset h3 {
  margin-bottom: 0;
  padding: .5rem 1rem;
  filter: contrast(.8)
}

.dashboard-container .typeahead {
  border: none;
  border-radius: 0.25rem;
  background-clip: padding-box;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  width: 100%;
  padding: 0.375rem 0.75rem;
  background: #3e4461;
  transition: width, opacity 5s linear;
  border: none;
  color: var(--banner-text) !important;
  padding-right: 2rem;
}

.dashboard-container .search-container form > span {
  width: 100%;
  display: inline-flex !important;
  justify-content: flex-end;
}

.dashboard-container .typeahead:focus {
  background: #3e4461;
  border: none;
  outline: none;
  transition: width .4s ease-in ;
  width: 100%;
}

@media (max-width: 960px) {
  .dashboard-container .typeahead {
    width: 100%;
  }
  .dashboard-container .search-container {
    flex: 999 999 auto;
  }
}

.zoomanim {
  animation: zoom 1s 1;
}

#selected-validators-input-button-val {
  position: absolute;
  visibility: hidden;
}

.goinboxanim {
  visibility: visible;
  animation: goInBox 1s 1;
}

.gooutboxanim {
  visibility: visible;
  animation: goOutBox 1s 1;
}

@keyframes zoom {
  0% {}
  25% {}
  50% { font-size: 25px; z-index: 9999; }
  100% { font-size: 15px; z-index: 9999; }
}

@keyframes goInBox {
  0% {
    visibility: visible;
    font-size: 15px;
    z-index: 100;
    top: 0%;
    }
  75% { visibility: visible; font-size: 0px; z-index: 100; top: 100%; }
  100% { visibility: hidden; font-size: 0px; z-index: 100; top: 100%; }
}

@keyframes goOutBox {
  0% {
    visibility: visible;
    font-size: 15px;
    z-index: 100;
    top: 40%;
    }
  75% { visibility: visible; font-size: 0px; z-index: 100; top: 0%; }
  100% { visibility: hidden; font-size: 0px; z-index: 100; top: 0%; }
}

.tt-open {
  background-color: var(--bg-color-secondary);
  scrollbar-color: var(--primary) rgba(0,0,0,0.2);
  scrollbar-width: thin;
}

#selected-validators-overview {
  scrollbar-color: var(--primary) rgba(0,0,0,0.2);
  scrollbar-width: thin;
}

.tt-open::-webkit-scrollbar, #selected-validators-overview::-webkit-scrollbar {
  width: 5px;
  /* background-color: var(--bg-color-secondary); */
}

.tt-open::-webkit-scrollbar-thumb, #selected-validators-overview::-webkit-scrollbar-thumb {
  background-color: var(--primary);
  border-radius: 12px;
  border-style: solid;
  color: var(--primary);
  border-width: 2px;
}

.proposal-switch {
  border-radius: 12px;
  border-style: none;
  border-color:  rgba(159, 162, 177, 0.4);
  background-color:rgba(159, 162, 177, 0.4);
  cursor:pointer;
  width: 65px;
  position: absolute;
  top: 0%;	
  left: 1%;
  z-index: 999;
}

.proposal-switch-selected {
  border-radius: 12px;
  border-style: none;
  background-color: var(--primary);
  color: var(--white);
}

#proposals-table_length, #proposals-table_info {
  display: none;
}

.summary-table td {
  text-align: right;
  white-space: normal;
}

.proposals-table > div {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.proposals-table > div > div:nth-child(3) { margin-top: auto !important }

.history-table table tbody td span { padding: .35rem .5rem !important }

@media screen and (max-width: 1140px) {
  .dashboard-table-nav { margin: 0 }
}

@media screen and (max-width: 500px) {
  .proposal-switch {
    position: relative;
  }
}

@media screen and (max-width: 450px) {
  .outer-container { padding: 0 }
  .summary-table, .validator-history-index { font-size: .9rem }
  .dashboard-table-nav-text { display: none }
}

